# reddraft.ai

./: .gitignore  CLAUDE.md  dev.py  eslint.config.ts  helpers.sh  manage.py  mypy.ini  package-lock.json  package.json  pyproject.toml  shell.nix  test_agent_sdk.py
client/: index.tsx  input.css
client/components/: Shell.tsx
client/features/: boot.tsx
client/templates/: DraftPage.tsx  QueuePage.tsx  SubredditsPage.tsx
data/: draft-generation-v3.md  peptide-calculator-features.md  peptides.json  voice.md
scripts/: fix.sh  test.sh
server/: settings.py  urls.py
server/core/: admin.py  apps.py  context_processors.py  models.py
server/core/migrations/: 0001_initial.py
server/drafts/: admin.py  apps.py  models.py  rpc.py  views.py
server/drafts/management/commands/: generate_draft.py  process_f5bot.py
server/drafts/migrations/: 0001_initial.py  0002_remove_draft_drafts_draft_status_enum_and_more.py  0003_draft_selected_variant.py
server/rpc/: __init__.py  apps.py  context.py  core.py  forms.py  legacy.py  patches.py  template.py
upstream/: eslint.config.ts  user.py
